--- a/my_calculator/pubspec.yaml
+++ b/my_calculator/pubspec.yaml
@@ -12,4 +12,4 @@ dependencies:
   collection: ^1.19.2
   material_color_utilities: ^0.13.1
   meta: ^1.17.0
-  vector_math: ^2.2.1
+  vector_math: 2.1.4
