--- a/my_calculator/pubspec.yaml
+++ b/my_calculator/pubspec.yaml
@@ -1,15 +1,8 @@
-name: my_calculator
-description: A simple calculator app without external packages.
-version: 1.0.0+1
-
-environment:
-  sdk: ">=2.17.0 <3.0.0"
-
 dependencies:
   flutter:
     sdk: flutter
-  characters: ^1.5.0
-  collection: ^1.19.2
-  material_color_utilities: ^0.13.1
-  meta: ^1.17.0
+  characters: 1.4.0
+  collection: 1.19.1
+  material_color_utilities: 0.13.0
+  meta: 1.17.0
   vector_math: 2.1.4
